--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,8 @@
-<p>register works!</p>
+<form>
+  <h2>Login or Register Below</h2>
+  <input [(ngModel)]="emailAddress" type="text" name="emailAddress" placeholder="Email Address"/>
+  <input [(ngModel)]="password" type="text" name="password" placeholder="Password"/>
+  <input [(ngModel)]="name" type="text" name="name" placeholder="Preferred Name"/>
+  <input (click)="registerUser()" type="submit" value="Register">
+  <input (click)="loginUser()" type="submit" value="Login">
+</form>
