going to refactor this mess

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-navbar></app-navbar>
-<app-register></app-register>
+<app-navbar [currentUser]="currentUser"></app-navbar>
+<router-outlet></router-outlet>
