--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav *ngIf="!this.currentUser">
   <h1>NEXT GROOVE</h1>
   <ul>
-    <li>LOGIN</li>
-    <li>BROWSE</li>
+    <li><a routerLink="/register">LOGIN/REGISTER</a> </li>
+    <li><a routerLink="/albums/browse/">BROWSE</a></li>
   </ul>
 </nav>
 
