--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,3 +5,4 @@
   <input (click)="registerUser()" type="submit" value="Register">
   <input (click)="loginUser()" type="submit" value="Login">
 </form>
+<app-profile></app-profile>
