--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<form>
+<form *ngIf="currentUser">
   <h2>What should we call you?</h2>
   <input [(ngModel)]="name" type="text" name="name" placeholder="Preferred Name"/>
   <input (click)="createProfile()" type="submit" value="CreateProf">
