separated register from login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,6 @@
 <form>
-  <h2>Register Below</h2>
+  <h2>Login Below</h2>
   <input [(ngModel)]="email" type="text" name="email" placeholder="Email"/>
   <input [(ngModel)]="password" type="text" name="password" placeholder="Password"/>
-  <input (click)="registerUser()" type="submit" value="Register">
+  <input (click)="loginUser()" type="submit" value="Login">
 </form>
-<app-profile></app-profile>
