having the registration also create the profile

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav *ngIf="!this.currentUser">
   <h1>NEXT GROOVE</h1>
   <ul>
-    <li><a routerLink="/register">LOGIN/REGISTER</a> </li>
+    <li><a routerLink="/register">REGISTER</a> </li>
+    <li><a routerLink="/login">LOGIN</a> </li>
     <li><a routerLink="/albums/browse/">BROWSE</a></li>
   </ul>
 </nav>
