--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,6 +2,7 @@
   <h2>Register Below</h2>
   <input [(ngModel)]="email" type="text" name="email" placeholder="Email"/>
   <input [(ngModel)]="password" type="text" name="password" placeholder="Password"/>
+  <input [(ngModel)]="name" type="text" name="name" placeholder="Preferred Name">
   <input (click)="registerUser()" type="submit" value="Register">
 </form>
 <app-profile></app-profile>
