added proxy, did not work

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
-<form *ngIf="">
+<form>
   <h2>What should we call you?</h2>
   <input [(ngModel)]="name" type="text" name="name" placeholder="Preferred Name"/>
-  <input (click)="createProfile()" type="submit" value="CreateProf">
+  <input (click)="createProfile()" type="submit" value="Create Profile">
 </form>
