--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-navbar [currentUser]="currentUser"></app-navbar>
-<router-outlet></router-outlet>
+<body>
+  <app-navbar [currentUser]="currentUser"></app-navbar>
+  <router-outlet></router-outlet>
+</body>
