search drop down is functional

--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -1,11 +1,14 @@
 <div id="browse-page">
   <span id="search">
-  <h2>Looking for something specific?</h2>
-  <form>
-    <input [(ngModel)]="searchInput" type="text" placeholder="search by title or artist" name="searchbar" (keyup)="pushSearch(searchInput)">
-  </form>
-
-</span>
+    <h2>Looking for something specific?</h2>
+    <form>
+      <input [(ngModel)]="searchInput" type="text" placeholder="search by title or artist" name="searchbar" (keyup)="pushSearch(searchInput)">
+    </form>
+    <select [(ngModel)]="genreFilter" name="genreFilter" (select)="genreFilter()">
+      <option value="-1">---</option>
+      <option *ngFor="let genre of genres; index as i" value="{{i}}"> {{genre.name}}</option>
+    </select>
+  </span>
   <section class="album-grid" *ngIf="!searchInput">
     <div class="album-listing" *ngFor="let album of albums">
       <img src="{{album.coverArtURL}}" class="album-cover">
@@ -19,5 +22,6 @@
       <h3>{{album.title}}</h3>
       <h4>{{album.artist}}</h4>
     </div>
+    <p *ngIf="!filteredAlbums && searchInput">No results</p>
   </section>
 </div>
