creating collection component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
     <h1>HI, {{this.currentUser.name}}</h1>
     <ul>
       <li><a routerLink="/browse/">BROWSE</a></li>
-      <li>COLLECTION</li>
+      <li> <a routerLink="/profile/collection">COLLECTION</a></li>
       <li>SESSION</li>
     </ul>
   </span>
