--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -4,9 +4,12 @@
     <img src="{{album.coverArtURL}}" class="collection-covers">
     <div>
       <h3>{{album.title}}</h3>
-      <h4>{{album.artist}}</h4>
+      <h3>{{album.artist}}</h3>
       <p>{{album.genre.name}}</p>
-      <p>{{album.tone}} - {{album.mood}}</p>
+      <p>TONE</p>
+      <p>({{album.avgHLVal}}, {{album.avgMDVal}})</p>
+      <p>MOOD</p>
+      <p>({{album.avgFSVal}}, {{album.avgUDVal}})</p>
     </div>
     <button id="select-button">select</button>
     <button (click)="removeFromCollection(album)" id="remove-button">remove</button>
