session component created

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,8 +10,8 @@
   <span *ngIf="this.currentUser">
     <ul>
       <li><a routerLink="/browse/">BROWSE</a></li>
-      <li> <a routerLink="/profile/collection">COLLECTION</a></li>
-      <li>SESSION</li>
+      <li><a routerLink="/profile/collection">COLLECTION</a></li>
+      <li><a routerLink="/profile/session">SESSION</a></li>
     </ul>
   </span>
 
