--- a/src/app/session/session.component.html
+++ b/src/app/session/session.component.html
@@ -1,1 +1,8 @@
-<h1>{{selection.title}} - {{selection.artist}}</h1>
+<div id="currently-listening">
+  <img src="{{selection.coverArtURL}}" id="selection-cover">
+  <h2>{{selection.title}}</h2>
+  <h3>{{selection.artist}}</h3>
+</div>
+<div id="next-groove">
+
+</div>
