--- a/src/app/session/session.component.html
+++ b/src/app/session/session.component.html
@@ -4,5 +4,7 @@
   <h3>{{selection.artist}}</h3>
 </div>
 <div id="next-groove">
-
+  <img src="{{nextGroove.coverArtURL}}" id="next-groove-cover">
+  <h2>{{nextGroove.title}}</h2>
+  <h3>{{nextGroove.artist}}</h3>
 </div>
