--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <body>
   <app-navbar [currentUser]="currentUser"></app-navbar>
-  <router-outlet></router-outlet>
+  <div id="main">
+    <router-outlet></router-outlet>
+  </div>
 </body>
