--- a/src/app/collection/collection.component.css
+++ b/src/app/collection/collection.component.css
@@ -1,10 +1,12 @@
-#collection-list
+#collection-list{
+  margin-right: 5%;
+}
 
 .collection-listings{
   display: grid;
   grid-template-columns: 30% 70%;
   grid-template-rows: 100%;
-  background-color: lightgray;
+  background-color: whitesmoke;
   padding: 5%;
 }
 .collection-covers{
