whole page put onto a grid - solved the centering issue. also, rating windows are complete

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,9 @@
 body{
-  display: inline-flex;
+  display: grid;
+  grid-template-columns: 25% 75%;
+  width: 100vw;
 }
 main{
   text-align: center;
+  width: 100%;
 }
