submit rating button added

--- a/src/app/rate/rate.component.html
+++ b/src/app/rate/rate.component.html
@@ -22,3 +22,4 @@
     <label>Uplifting</label>
   </div>
 </section>
+<button (click)="submitRatings(hLVal, mDVal, fSVal, uDVal)">Submit Rating</button>
