contribute component created

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
     <ul>
       <li><a routerLink="/browse/">BROWSE</a></li>
       <li><a routerLink="/profile/collection">COLLECTION</a></li>
-      <li><a routerLink="/profile/session">SESSION</a></li>
+      <li><a routerLink="/contribute">CONTRIBUTE</a></li>
     </ul>
   </span>
 
