--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <h1>NEXT GROOVE</h1>
+  <a routerLink="/" id="site-title">NEXT GROOVE</a>
   <span *ngIf="!this.currentUser">
     <ul>
       <li><a routerLink="/register">REGISTER</a></li>
