--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,3 +1,13 @@
 form{
   text-align: center;
+  margin: 15% 35%;
+  padding: 5%;
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: black solid 1px;
+}
+input{
+  width: 50%;
 }
