--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,8 +2,10 @@ body{
   display: grid;
   grid-template-columns: 25% 75%;
   width: 100vw;
+  height: 100vh;
 }
 main{
   text-align: center;
-  width: 100%;
+}
+router-outlet{
 }
