--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,7 +1,7 @@
 nav{
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   width: 25vw;
   align-items: center;
   text-align: center;
