--- a/src/app/rate/rate.component.css
+++ b/src/app/rate/rate.component.css
@@ -7,6 +7,15 @@
 #rating-window{
   display: flex;
   justify-content: space-evenly;
-  margin-top: 20%;
+  margin-top: 2%;
   width: 100%;
 }
+h2{
+  text-align: center;
+  margin-top: 15%;
+}
+button{
+  width: 15%;
+}
+
+
