--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,13 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: lightgrey; }
 ul{ list-style: none}
+.break{
+  flex-basis: 100%;
+  height: 0;
+}
+.center-flex{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
