--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,8 @@
-<form>
-  <h2>Login Below</h2>
-  <input [(ngModel)]="email" type="text" name="email" placeholder="Email"/>
-  <input [(ngModel)]="password" type="text" name="password" placeholder="Password"/>
-  <input (click)="loginUser()" type="submit" value="Login">
-</form>
+<div class="center-flex">
+  <form>
+    <h2>Login Below</h2>
+    <input [(ngModel)]="email" type="text" name="email" placeholder="Email"/>
+    <input [(ngModel)]="password" type="text" name="password" placeholder="Password"/>
+    <input (click)="loginUser()" type="submit" value="Login">
+  </form>
+</div>
