--- a/src/app/browse/browse.component.css
+++ b/src/app/browse/browse.component.css
@@ -1,6 +1,6 @@
 .album-grid{
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(1, 1fr);
 }
 
@@ -11,7 +11,7 @@
   background-color: whitesmoke;
   border: 1px grey solid;
   text-align: center;
-  padding-top: 10%;
+  padding: 10% 0 5%;
   margin: 2%;
 }
 h3, h4{
