--- a/src/app/collection/collection.component.css
+++ b/src/app/collection/collection.component.css
@@ -4,19 +4,31 @@
 
 .collection-listings{
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-columns: 30% 60% 10%;
   grid-template-rows: 100%;
-  background-color: whitesmoke;
-  padding: 5%;
 }
 .collection-covers{
   max-width: 100%;
 }
-#remove-button{
-  margin-left: 60%;
-  max-width: 40%;
-}
 #scrollable-list{
   height: 100vh;
   overflow-y: auto;
+}
+#album-info{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: right;
+}
+#buttons{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+}
+button{
+  width: 50%;
+  text-align: center;
+  margin: 4% 0%;
 }
