session view now cleaned up

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -5,7 +5,7 @@ nav{
   width: 25vw;
   align-items: center;
   text-align: center;
-  background-color: midnightblue;
+  background-color: slategray;
   color: white;
 }
 span{
