--- a/src/app/session/session.component.html
+++ b/src/app/session/session.component.html
@@ -1,10 +1,18 @@
-<div id="currently-listening">
-  <img src="{{selection.coverArtURL}}" id="selection-cover">
-  <h2>{{selection.title}}</h2>
-  <h3>{{selection.artist}}</h3>
-</div>
-<div id="next-groove">
-  <img src="{{nextGroove.coverArtURL}}" id="next-groove-cover">
-  <h2>{{nextGroove.title}}</h2>
-  <h3>{{nextGroove.artist}}</h3>
-</div>
+<section>
+  <mat-card id="currently-listening">
+    <mat-card-title>NOW PLAYING</mat-card-title>
+    <img src="{{selection.coverArtURL}}" id="selection-cover">
+    <div class="bottom-text">
+      <mat-card-title>{{selection.title}}</mat-card-title>
+      <mat-card-subtitle>{{selection.artist}}</mat-card-subtitle>
+    </div>
+  </mat-card>
+  <mat-card id="next-groove">
+    <mat-card-title id="up-next-text">UP NEXT...</mat-card-title>
+    <img src="{{nextGroove.coverArtURL}}" id="next-groove-cover">
+    <div class="bottom-text">
+      <mat-card-title>{{nextGroove.title}}</mat-card-title>
+      <mat-card-subtitle>{{nextGroove.artist}}</mat-card-subtitle>
+    </div>
+  </mat-card>
+</section>
