--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,9 +9,10 @@
   </span>
   <span *ngIf="this.currentUser">
     <ul>
-      <li><a routerLink="/browse/">BROWSE</a></li>
       <li><a routerLink="/profile/collection">COLLECTION</a></li>
       <li><a routerLink="/contribute">CONTRIBUTE</a></li>
+      <li><a routerLink="/browse/">BROWSE</a></li>
+      <li><a routerLink="/logout">LOGOUT</a></li>
     </ul>
   </span>
 
