working through logout function

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <body>
-  <app-navbar [currentUser]="currentUser"></app-navbar>
+  <app-navbar></app-navbar>
   <div id="main">
     <router-outlet></router-outlet>
   </div>
