simplifying a few things for the presentation

--- a/src/app/contribute/contribute.component.html
+++ b/src/app/contribute/contribute.component.html
@@ -5,10 +5,10 @@
     <input [(ngModel)]="artist" name="artist" placeholder="artist">
     <input [(ngModel)]="genre" name="genre" placeholder="genre">
     <input [(ngModel)]="coverURL" name="coverUrl" placeholder="link to cover art">
-    <input [(ngModel)]="hL" name="hL" placeholder="Production Rating">
-    <input [(ngModel)]="mD" name="mD" placeholder="Arrangement Rating">
-    <input [(ngModel)]="fS" name="fS" placeholder="Tempo Rating">
-    <input [(ngModel)]="uD" name="uD" placeholder="Emotion Rating">
+<!--    <input [(ngModel)]="hL" name="hL" placeholder="Production Rating">-->
+<!--    <input [(ngModel)]="mD" name="mD" placeholder="Arrangement Rating">-->
+<!--    <input [(ngModel)]="fS" name="fS" placeholder="Tempo Rating">-->
+<!--    <input [(ngModel)]="uD" name="uD" placeholder="Emotion Rating">-->
     <br>
     <input (click)="createAlbum()" type="submit" value="submit">
   </form>
