added end session button to session component

--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -36,4 +36,7 @@
 </section>
 <section *ngIf="mySelection">
   <app-session [selection]="mySelection" [collection]="myCollection"></app-session>
+  <div class="center-flex">
+    <a (click)="clearSession()" id="end-session">End Session</a>
+  </div>
 </section>
