--- a/src/app/collection/collection.component.css
+++ b/src/app/collection/collection.component.css
@@ -1,7 +1,6 @@
 #collection-list{
   margin-right: 5%;
 }
-
 .collection-listings{
   display: grid;
   grid-template-columns: 30% 60% 10%;
@@ -45,5 +44,17 @@ h2{
 }
 #greeting{
   margin: 0 40% 0 5%;
+}
+.center-flex{
+  margin-left: 75%;
+}
+#end-session{
+  margin-right: 2%;
+  background-color: slategray;
+  color: whitesmoke;
+  padding: 3%;
+}
+#end-session:hover{
+  background-color: lightslategray;
 }
 
