added landing component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <a routerLink="/" id="site-title">NEXT GROOVE</a>
+  <a routerLink="/welcome" id="site-title">NEXT GROOVE</a>
   <span *ngIf="!getCurrentUser()">
     <ul>
       <li><a routerLink="/register">REGISTER</a></li>
