--- a/src/app/rate/rate.component.html
+++ b/src/app/rate/rate.component.html
@@ -24,5 +24,5 @@
       <label>Uplifting</label>
     </div>
   </section>
-  <button (click)="submitRatings(hLVal, mDVal, fSVal, uDVal)">Submit Rating</button>
+  <a class="gray-button" (click)="submitRatings(hLVal, mDVal, fSVal, uDVal)">Submit Rating</a>
 </div>
