--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -14,7 +14,7 @@
       <img src="{{album.coverArtURL}}" class="album-cover">
       <mat-card-title>{{album.title}}</mat-card-title>
       <mat-card-subtitle>{{album.artist}}</mat-card-subtitle>
-      <button (click)="addToCollection(album)" *ngIf="!checkForAlbum(album)">ADD TO COLLECTION</button>
+      <a class="gray-button" (click)="addToCollection(album)" *ngIf="!checkForAlbum(album)">ADD TO COLLECTION</a>
       <mat-card-content *ngIf="checkForAlbum(album)">IN COLLECTION</mat-card-content>
     </mat-card>
   </section>
