--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -4,10 +4,10 @@
     <form>
       <input [(ngModel)]="searchInput" type="text" placeholder="search by title or artist" name="searchbar" (keyup)="pushSearch(searchInput)">
     </form>
-    <select [(ngModel)]="genreFilter" name="genreFilter" (select)="genreFilter()">
-      <option value="-1">---</option>
-      <option *ngFor="let genre of genres; index as i" value="{{i}}"> {{genre.name}}</option>
-    </select>
+<!--    <select [(ngModel)]="genreFilter" name="genreFilter" (select)="genreFilter()">-->
+<!--      <option value="-1">-&#45;&#45;</option>-->
+<!--      <option *ngFor="let genre of genres; index as i" value="{{i}}"> {{genre.name}}</option>-->
+<!--    </select>-->
   </span>
   <section class="album-grid" *ngIf="!searchInput">
     <mat-card class="album-listing" *ngFor="let album of albums">
@@ -23,7 +23,8 @@
       <img src="{{album.coverArtURL}}" class="album-cover">
       <mat-card-title>{{album.title}}</mat-card-title>
       <mat-card-subtitle >{{album.artist}}</mat-card-subtitle>
-      <button (click)="addToCollection(album)">ADD TO COLLECTION</button>
+      <a class="gray-button" (click)="addToCollection(album)" *ngIf="!checkForAlbum(album)">ADD TO COLLECTION</a>
+      <mat-card-content *ngIf="checkForAlbum(album)">IN COLLECTION</mat-card-content>
     </mat-card>
     <p *ngIf="!filteredAlbums && searchInput" id="no-results">No results</p>
   </section>
