--- a/src/app/collection/collection.component.css
+++ b/src/app/collection/collection.component.css
@@ -33,16 +33,17 @@ button{
 header{
   display: inline-flex;
   justify-content: space-between;
+  width: 100%;
   margin-top: 2%;
 }
 h2{
   display: inline;
 }
 #heading{
-  margin-left: 35%;
+  text-align: right;
 }
 #greeting{
-  margin: 0 40% 0 5%;
+  margin: 0 50% 0 5%;
 }
 .center-flex{
   margin-left: 75%;
